fix missing padding

--- a/app/assets/stylesheets/_m-theme.scss
+++ b/app/assets/stylesheets/_m-theme.scss
@@ -100,6 +100,7 @@ strong,
   @extend .list-unstyled;
   > li {
     display: inline-block;
+    padding-right: 24px;
   }
 }
 
